# apc_report

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: sample_report_workflow.md
src/apc_report/: __init__.py  cli.py  config.py  constants.py  models.py  reporting.py  scraper.py  utils.py
tests/: test_config.py  test_utils.py
